--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submod2"]
 	path = submod2
-	url = C:\\Users\\Satheesh.Kumar\\source\\repos\\submod2
+url=https://github.com/satheeshqhse/submod2.git
